--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
