--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "react": "^18.2.0",
+    "react-scripts": "^5.0.1"
   }
 }
