--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.3",
     "react": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^2.1.3"
   }
 }
