--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "firebase": "^9.17.2",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.8.3",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-scripts": "^2.1.3"
   }
