--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,7 +1,7 @@
 on: push
 jobs: 
   build-node:
-    runs-on: ubintu-latest
+    runs-on: ubuntu-latest
     container: node:16
     steps:
       - run: node --version
