--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,1 @@
-sudo: false
-
-language: node_js
-
-node_js:
-  - node
-
-install: 
-  - npm ci
-
-script: 
-  - npm test
-
-notifications:
- email: false
+#GITHUB ACTIONS INTEAD
