--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,5 +7,7 @@ jobs:
       - run: node --version
       - run: npm --version
       - uses: actions/checkout@v3
-      - run: npm install
+      - run: npm i ts-node -g
+      - run: npm i --force && cd .\frontend\
+      - run: npm i --force && cd ../
       - run: npm run dev
