--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,4 +8,4 @@ jobs:
       - run: npm --version
       - uses: actions/checkout@v3
       - run: npm i ts-node -g
-      - run: npm run build
+      - run: npm run server
