--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v3
       - run: npm i ts-node -g
       - run: npm install --force
-      - run: npm run server
+      - run: npm run test
