--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MERN project",
   "main": "server.ts",
   "scripts": {
-    "test": "jest --watchAll --verbose",
+    "test": "jest --verbose",
     "start": "node backend/server.ts",
     "server": "nodemon backend/server.ts",
     "client": "npm start --prefix frontend",
