--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest --watchAll --verbose",
+    "test": "jest --verbose",
     "start": "node backend/server.ts",
     "server": "nodemon backend/server.ts",
     "client": "npm start --prefix frontend",
@@ -25,8 +25,10 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "typescript": "^5.0.0-dev.20230217"
   },
