--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "ts-node": "^10.9.1"
   }
 }
