--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
     "jest": "^29.4.3",
+    "mockingoose": "^2.16.2",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
