--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "eslint-config-react-app": "^7.0.1",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
