--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
 on: push
+
 jobs: 
   build-node:
+    name: Running Tests
     runs-on: ubuntu-latest
     container: node:16
     steps:
@@ -12,3 +14,17 @@ jobs:
       - run: npm run test
         env:
             CI: true
+    codacy-coverage-reporter:
+    name: codacy-coverage-reporter
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run codacy-coverage-reporter
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          # or
+          # api-token: ${{ secrets.CODACY_API_TOKEN }}
+          coverage-reports: ../../coverage/lcov.info
+          # or a comma-separated list for multiple reports
+          # coverage-reports: <PATH_TO_REPORT>, <PATH_TO_REPORT>
