--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
         env:
             CI: true
   codacy-coverage-reporter:
+    needs: build-node
     name: codacy-coverage-reporter
     runs-on: ubuntu-latest
     steps:
