--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,20 +12,27 @@ jobs:
       - run: npm i ts-node -g
       - run: npm install --force
       - run: npm run test
-        env:
-            CI: true
-  codacy-coverage-reporter:
-    needs: build-node
-    name: codacy-coverage-reporter
-    runs-on: ubuntu-latest
-    steps:
       - uses: actions/checkout@v2
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          # or
-          # api-token: ${{ secrets.CODACY_API_TOKEN }}
           coverage-reports: coverage/lcov.info
-          # or a comma-separated list for multiple reports
-          # coverage-reports: <PATH_TO_REPORT>, <PATH_TO_REPORT>
+        env:
+            CI: true
+
+  # codacy-coverage-reporter:
+  #   needs: build-node
+  #   name: codacy-coverage-reporter
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Run codacy-coverage-reporter
+  #       uses: codacy/codacy-coverage-reporter-action@v1
+  #       with:
+  #         project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+  #         # or
+  #         # api-token: ${{ secrets.CODACY_API_TOKEN }}
+  #         coverage-reports: coverage/lcov.info
+  #         # or a comma-separated list for multiple reports
+  #         # coverage-reports: <PATH_TO_REPORT>, <PATH_TO_REPORT>
