--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,10 @@ jobs:
       - run: node --version
       - run: npm --version
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          submodules: 'recursive'
+          path: './'
       - run: npm i ts-node -g
       - run: npm install --force
       - run: npm run test
