--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,10 @@ jobs:
       - run: npm i ts-node -g
       - run: npm install --force
       - run: npm run test
+
       - uses: actions/checkout@v2
+      - name: Install Codacy coverage reporter
+        run: bash <(curl -Ls https://coverage.codacy.com/get.sh)
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
