--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,7 @@ jobs:
       - run: npm run test
 
       - uses: actions/checkout@v2
-      - name: Install Codacy coverage reporter
-        run: curl -Ls https://coverage.codacy.com/get.sh | bash
+
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
@@ -52,8 +51,8 @@ jobs:
 #       - run: npm run test
 
 #       - uses: actions/checkout@v2
-#       - name: Install Codacy coverage reporter
-#         run: curl -Ls https://coverage.codacy.com/get.sh | bash
+#         //- name: Install Codacy coverage reporter
+#         //run: curl -Ls https://coverage.codacy.com/get.sh | bash
 #       - name: Run codacy-coverage-reporter
 #         uses: codacy/codacy-coverage-reporter-action@v1
 #         with:
