--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,13 +27,16 @@ jobs:
       - run: npm install --force
       - run: npm run test
 
+      - name: Debug coverage directory contents
+        run: ls -R coverage/
+
       - uses: actions/checkout@v2
 
       - name: Run codacy-coverage-reporter
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          coverage-reports: ../coverage/lcov.info
+          coverage-reports: ./coverage/lcov.info
 
 # on: push
 
