--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.3"
+    "@types/leaflet": "^1.9.3",
+    "@types/react-leaflet": "^3.0.0"
   }
 }
