--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "career-service-platform",
   "version": "1.0.0",
   "description": "MERN project",
+  "type": "module",
   "main": "server.ts",
   "scripts": {
     "test": "jest --runInBand --detectOpenHandles --forceExit",
